--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,27 @@ html {
 
 body {
   margin: 0 auto;
+  width: 100%;
   /* overflow-x: visible; */
   /* Dark mode animtaion */
   transition: 0.5s;
 }
 
-.App {
+/* .App {
   height: 100%;
   position: relative;
+  width: 100%;
+} */
+
+/* .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+
+#root {
+  width: 100%;
 }
 
 .body__width {
