--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -1,11 +1,18 @@
 .home {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home__container {
   width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 80px);
   color: white;
 }
 
@@ -99,10 +106,11 @@
 
 .home__container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 1rem;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .form__input {
@@ -167,7 +175,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
+  width: 50%;
+  max-width: 300px;
 }
 
 .input__select {
@@ -184,4 +194,33 @@
 
 .select__btn:hover {
   filter: brightness(70%);
+}
+
+.select__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0.5rem;
+}
+
+@media (max-width: 430px) {
+  .home__title,
+  .home__description--name {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 620px) {
+  .home__title-2,
+  .home__description--name,
+  .form__select {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 390px) {
+  .home__container--title * {
+    font-size: 8px;
+  }
 }
