--- a/src/pages/styles/HomeTrainerMenu.css
+++ b/src/pages/styles/HomeTrainerMenu.css
@@ -8,8 +8,18 @@ i {
   color: crimson;
 }
 
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.App {
+  height: 100vh;
+}
+
 .home-trainer__container {
-  margin-top: 1rem;
   height: 100%;
   width: 100%;
   display: flex;
@@ -38,6 +48,7 @@ i {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
+  row-gap: 1rem;
   width: 100%;
   justify-content: space-evenly;
   padding: 0 1rem;
@@ -108,7 +119,7 @@ i {
   }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 690px) {
   .home-trainer__menu--container {
     flex-direction: column;
   }
@@ -130,7 +141,17 @@ i {
     width: 50%;
     min-width: 200px;
     justify-content: center;
+  }
+}
 
-    /* max-width: 300px; */
+@media (max-width: 540px) {
+  .home-trainer__description {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 330px) {
+  .home-trainer__description {
+    font-size: 8px;
   }
 }
