--- a/src/pages/styles/Pokedex.css
+++ b/src/pages/styles/Pokedex.css
@@ -200,7 +200,7 @@ html {
 }
 
 .pokedex__pagination--list {
-  width: 100%;
+  width: 95%;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -239,6 +239,21 @@ html {
   border-radius: 7px;
   padding: 2px 10px;
   font-weight: 600;
+}
+
+@media (max-width: 950px) {
+  .pokedex__pagination--list {
+    margin-bottom: 216px;
+  }
+}
+
+@media (max-width: 550px) {
+  .pokedex__pagination--list {
+    font-size: 12px;
+  }
+  .pokedex__pagination--list > li i {
+    font-size: 16px;
+  }
 }
 
 /* styles card tyoe */
